# wgpu_yew_template

./: .gitignore  Cargo.toml  README.md  Trunk.toml  app.css  index.html  tailwind.config.js
src/: app.rs  context.rs  main.rs  shader.wgsl
