[package]
name = "wgpu_yew_template"
version = "0.1.0"
edition = "2021"
authors = ["Kaze Wong <kazewong.physics@gmail.com>"]
license = "MIT"
description = "A template for using wgpu with Yew"

[dependencies]
# this is the development version of Yew
cfg-if = "0.1.10"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wgpu = { version = "0.18", features = ["webgl"]}
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
log = "0.4.20"
winit = { version= "0.29.10", features = ["rwh_05"] }


[dependencies.web-sys]
version = "0.3.0"
features = ["File", "DragEvent", "DataTransfer", "HtmlCanvasElement"]